--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "aws-amplify": "^1.2.2",
+    "aws-amplify-vue": "^0.3.2",
+    "chart.js": "^2.8.0",
     "core-js": "^3.1.2",
+    "portfinder": "^1.0.21",
     "vue": "^2.6.10",
+    "vue-chartjs": "^3.4.2",
     "vue-router": "^3.0.6"
   },
   "devDependencies": {
